# drt-delegation-sc

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  clean-wasm.sh  coverage.sh  vm-test-build-copy.sh
auction-mock/: Cargo.toml  dharitri.json  sc-config.toml
auction-mock/meta/: Cargo.toml
auction-mock/output/: auction-mock.abi.json  auction-mock.imports.json  auction-mock.mxsc.json
auction-mock/src/: lib.rs  storage.rs
auction-mock/wasm/: Cargo.toml
latest/: Cargo.toml  sc-config.toml
latest/meta/: Cargo.toml
latest/output/: delegation_latest_full.abi.json  delegation_latest_full.imports.json  delegation_latest_full.mxsc.json  delegation_latest_update.abi.json  delegation_latest_update.imports.json  delegation_latest_update.mxsc.json
latest/scenarios/: activate_nodes.scen.json  change_service_fee.scen.json  claim_rewards_1.scen.json  claim_rewards_owner_with_stake.scen.json  claim_rewards_with_changed_service_fee.scen.json  claim_rewards_with_modify_delegation_cap.scen.json  claim_rewards_with_stake_modifications.scen.json  continue_global_operations.scen.json  decrease_cap_in_bootstrap_mode.scen.json  genesis_addr_fix.scen.json  increase_delegation_cap.scen.json  rewards_for_unStaked_go_to_the_owner.scen.json  set_num_blocks_before_unbond.scen.json  staking_1.scen.json  staking_2.scen.json  total_funds_getters.scen.json  unbond.scen.json  unbond_from_waiting.scen.json  unjail.scen.json  unstake_1.scen.json  unstake_2.scen.json  unstake_3.scen.json  unstake_4.scen.json  unstake_5_backwards.scen.json  (+4 more)
latest_full/: Cargo.toml  sc-config.toml
(+215 files in other folders)
