[package]
name = "delegation_latest"
version = "0.5.8"
authors = ["Andrei Marinica <andrei.marinica@dharitri.com>"]
edition = "2018"

[lib]
path = "src/delegation_main.rs"

[dependencies.node-storage]
path = "../node-storage"

[dependencies.user-fund-storage]
path = "../user-fund-storage"

[dependencies.dharitri-sc-modules]
version = "0.13.3"

[dependencies.dharitri-sc]
version = "0.13.3"

[dev-dependencies.dharitri-sc-scenario]
version = "0.13.3"

[dev-dependencies.auction-mock]
path = "../auction-mock"
