[package]
name = "delegation_latest_full"
version = "0.5.8"
authors = ["Andrei Marinica <andrei.marinica@dharitri.com>"]
edition = "2018"

[dependencies.delegation_latest]
path = "../latest"

[dependencies.dharitri-sc]
version = "0.13.3"

[dev-dependencies.dharitri-sc-scenario]
version = "0.13.3"

[dev-dependencies.auction-mock]
path = "../auction-mock"
